AI telegram chatbot

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 GOOGLE_AI_STUDIO_API_KEY=your_google_ai_studio_api_key_here
 
 # Optional: Model Configuration
-GOOGLE_AI_MODEL=gemini-pro
+GOOGLE_AI_MODEL=gemini-1.5-flash
 MAX_TOKENS=1000
 TEMPERATURE=0.7
 
